fix layout content spacing (left/right), spacing in modal cards and tabs alignment in header

--- a/src/themes/default/styles/component.btn.css
+++ b/src/themes/default/styles/component.btn.css
@@ -63,6 +63,7 @@
 
     &--med {
         font-size: 15px;
+        min-width: calc($unit * 27);
         height: calc($unit * 10);
         padding: 0 calc($unit * 4);
         line-height: calc($unit * 10);
