--- a/src/themes/default/styles/component.inputgroup.css
+++ b/src/themes/default/styles/component.inputgroup.css
@@ -26,7 +26,7 @@
     }
 
     &--aside { 
-        display: table-cell;
+        /* display: table-cell; */
         width: 1%;
         white-space: nowrap;
         vertical-align: middle;
