--- a/src/themes/default/styles/component.tabs.css
+++ b/src/themes/default/styles/component.tabs.css
@@ -20,7 +20,6 @@
             color: $grey-4;
             
             float: left;
-            border-bottom: 2px solid transparent;
             
             &:hover {
                 color: color($color-primary a(0.5));
